--- a/pages/singUp.html
+++ b/pages/singUp.html
@@ -17,6 +17,8 @@
     <button type="submit">Cadastrar-se</button>
   </form>
 </div>
-  <script src="/scripts/auth/cadastrarUsuario.js"></script>
+
+<script src="/scripts/config.js"></script>
+<script src="/scripts/auth/cadastrarUsuario.js"></script>
 </body>
 </html>
