--- a/pages/home.html
+++ b/pages/home.html
@@ -51,6 +51,7 @@
 
 <script src="/scripts/config.js"></script>
 <script src="/scripts/auth/logout.js"></script>
+<script src="/scripts/auth/refresh.js"></script>
 <script src="/scripts/home.js"></script>
 </body>
 </html>
