--- a/pages/home.html
+++ b/pages/home.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=0.8">
   <title>Home</title>
+  <link rel="icon" sizes="32x32" href="../assets/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="/styles/home.css">
 </head>
 <body>
