Mudando de png para svg

--- a/pages/home.html
+++ b/pages/home.html
@@ -18,7 +18,7 @@
 <div class="view">
   <div class="search_add">
     <div class="search_container">
-      <img class="lupa" src="/assets/lupa.png" alt="Lupa">
+      <img class="lupa" src="/assets/lupa.svg" alt="Lupa">
       <input type="text" id="filtro" name="filtro" placeholder="Mercadoria">
     </div>
     <button id="add">+</button>
@@ -38,13 +38,13 @@
   <span>2025</span>
   <div class="img-footer">
     <a href="https://github.com/Eurico149">
-      <img src="../assets/github.png" alt="Github">
+      <img src="../assets/github.svg" alt="Github">
     </a>
     <a href="https://www.linkedin.com/in/euricogvp/">
-      <img src="../assets/linkedin.png" alt="Linkedin">
+      <img src="../assets/linkedin.svg" alt="Linkedin">
     </a>
     <a href="https://www.instagram.com/eurico_gabriel149/">
-      <img src="../assets/instagram.png" alt="Instagram">
+      <img src="../assets/instagram.svg" alt="Instagram">
     </a>
   </div>
 </footer>
