--- a/pages/home.html
+++ b/pages/home.html
@@ -50,7 +50,7 @@
 </footer>
 
 
-<script src="/scripts/config.js"></script>
+<script src="/scripts/api.js"></script>
 <script src="/scripts/auth/logout.js"></script>
 <script src="/scripts/auth/refresh.js"></script>
 <script src="/scripts/home.js"></script>
