--- a/pages/login.html
+++ b/pages/login.html
@@ -20,7 +20,7 @@
   </form>
 </div>
 
-<script src="/scripts/config.js"></script>
+<script src="/scripts/api.js"></script>
 <script src="/scripts/auth/login.js"></script>
 </body>
 </html>
